[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/HUD/HUD_MissionsSpace.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/dogicapixelbold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="HUD_MissionsSpace" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Missions" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -247.0
margin_bottom = -357.0

[node name="VBoxContainer" type="VBoxContainer" parent="Missions"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label3" type="Label" parent="Missions/VBoxContainer"]
margin_top = 37.0
margin_right = 247.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 4 )
text = "
-----------------"

[node name="Label_Mission1" type="Label" parent="Missions/VBoxContainer"]
margin_top = 68.0
margin_right = 247.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 1 )

[node name="Label" type="Label" parent="Missions/VBoxContainer"]
margin_top = 84.0
margin_right = 247.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 4 )
text = "
-----------------"

[node name="Label_Mission2" type="Label" parent="Missions/VBoxContainer"]
margin_top = 115.0
margin_right = 247.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )

[node name="Label2" type="Label" parent="Missions/VBoxContainer"]
margin_top = 131.0
margin_right = 247.0
margin_bottom = 158.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 4 )
text = "
-----------------"

[node name="Label_Mission3" type="Label" parent="Missions/VBoxContainer"]
margin_top = 162.0
margin_right = 247.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 3 )

[node name="Label4" type="Label" parent="Missions/VBoxContainer"]
margin_top = 178.0
margin_right = 247.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 4 )
text = "
-----------------"
